<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <!-- Using the layout from Assignment 2 as a starting point. Minimal changes expected
         Keeping the enclosing FrameLayout generated by Android Studio (when I used the wizard to add a blank fragment) -->
   <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/mandatoryUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/mandatory_indicator"
            android:textColor="@color/mandatory_and_error_indicator"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextUserName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textUserLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextUserName"
            app:layout_constraintStart_toEndOf="@+id/mandatoryUser" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@id/barrierLabels"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mandatoryPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/mandatory_indicator"
            android:textColor="@color/mandatory_and_error_indicator"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPassword"
            app:layout_constraintStart_toEndOf="@+id/mandatoryPassword" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toEndOf="@id/barrierLabels"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="textUserLabel,textPasswordLabel" />

        <TextView
            android:id="@+id/textErrorMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="start"
            android:textColor="@color/mandatory_and_error_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierLabels"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_button_label"
            app:layout_constraintStart_toEndOf="@id/barrierLabels"
            app:layout_constraintTop_toBottomOf="@+id/textErrorMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>