...
    <string name="delete_user_details_required_header">Please enter</string>
    <string name="delete__user_error_unable_to_delete">Sorry. We cannot find that user. Please try again</string>

    <!--Added automatically by Android Studio -->
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
...
    <!-- miscellaneous-->
    <string name="mandatory_indicator">*</string>
    <string name="missing_details_header">Please enter</string>
    <string name="login_error_header">Please enter your</string>

    <!-- from assignment 2 -->
    <string name="login_button_label">Login</string>
    <string name="login_error_user_name">User Name</string>
    <string name="login_error_password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_home_header">Home</string>
    <string name="tab_text_inventory">Inventory</string>
    <string name="logout">Logout</string>
...
